# cma_environment

./: README.md  __init__.py  api.py  bounds.py  crs.py  currents.py  landcover.py  ocean_cover.py  pyproject.toml  terrain_annotator.py  weather.py
resources/: __init__.py
resources/marine_cover/: __init__.py
tests/: bears.pickle  rubythroat.pickle  test.py
